- Add dynamic sizing depending and how many squares we wanna display - Change styling in style.css, fixed width of 1000px, delete flex grow, padding && gap

--- a/etch-a-sketch/style.css
+++ b/etch-a-sketch/style.css
@@ -9,17 +9,13 @@ body {
 }
 .container {
     display: flex;
-    width: 100%;
-    gap: 2px;
+    width: 1000px;
     flex-wrap: wrap;
     border: solid black 1px;
-    padding: 5px;
     justify-content: center;
 }
 
 .box {
     border: solid black 1px;
-    padding: 1vw;
-    flex: 1 0 2%;
     text-align: center;
 }
